pocket_information/resources/k8s-openshift/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: route-${APPLICATION_NAME}
  name: route-${APPLICATION_NAME}
  namespace: ${NAMESPACE}
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: 'roundrobin'
spec:
  port:
    targetPort: ${CONTAINER_PORT}-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: ${APPLICATION_NAME}
    weight: 100
  wildcardPolicy: None
